does not change color based on class

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class='holder' ondrop="doTheDrop(event)" ondragover='allowDrop(event)'></div>
 
-    <div class='holder' id='noshow' ondrop="doTheDrop(event)" ondragover='allowDrop(event)'><img id='thedrag' ondragstart='startdrag(event)' draggable='true' src='http://static.dudeiwantthat.com/img/style/headwear/turkey-hat-5394.jpg' /></div>
+    <div class='holder noshow' ondrop="doTheDrop(event)" ondragover='allowDrop(event)'><img id='thedrag' ondragstart='startdrag(event)' draggable='true' src='http://static.dudeiwantthat.com/img/style/headwear/turkey-hat-5394.jpg' /></div>
     
 </body>
 </html>
